--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,11 @@ img {
 }
 .contenedor {
 	max-width: 120rem; /** =1200px; **/
-	width: 95%;
+	width: 90%;
 	margin: 0 auto;
+}
+h1, h2, h3, h4 {
+	margin-top: 0;
 }
 h1 {
 	font-size: 3.8rem;
@@ -80,8 +83,16 @@ h4 {
 .boton-amarillo {
 	background-color: #e08709;
 }
+.boton-amarillo:hover {
+	background-color: #c27303;
+	transition: all .4s ease-in-out;
+}
 .boton-verde {
 	background-color: #71b100;
+}
+.boton-verde:hover {
+	background-color: #5c8d06;
+	transition: all .4s ease-in-out;
 }
 
 /* Header */
@@ -111,22 +122,31 @@ h4 {
 }
 .contenido-header h1 {
 	color: #ffffff;
-	padding-bottom: 2rem;
 	max-width: 60rem;
 	line-height: 2;
 }
 .barra {
 	padding-top: 3rem;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-items: center;
+}
+.barra .logo {
+	margin: 0;
+	width: 80%;
 }
 @media (min-width: 768px) {
-	.barra {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+	.barra .logo {
+		width: auto;
 	}
 }
 
 /** Navegación **/
+.navegacion {
+	margin-top: 2rem;
+	width: 100%;
+}
 .navegacion a {
 	color: #ffffff;
 	text-decoration: none;
@@ -135,6 +155,10 @@ h4 {
 	text-align: center;
 }
 @media (min-width: 768px) {
+	.navegacion {
+		width: auto;
+		margin-top: 0;
+	}
 	.navegacion a {
 		display: inline-block;
 		margin-right: 2rem;
@@ -149,26 +173,22 @@ h4 {
 }
 
 /** Mobile-menu **/
-.mobile-menu a {
-	text-align: center;
+.menu-movil {
+	margin-bottom: .5rem;
 }
-.mobile-menu img {
-	width: 5rem;
-}
-@media (min-width: 768px) {
-	.mobile-menu {
-		display: none;
-	}
-}
-#navegacion:target {
+.menu-movil span {
+	height: 0.5rem;
+	width: 3.8rem;
+	margin-bottom: 0.6rem;
+	background-color: #ffffff;
 	display: block;
 }
-.navegacion {
-	display: none;
+.menu-movil:hover {
+	cursor: pointer;
 }
 @media (min-width: 768px) {
-	.navegacion {
-		display: block;
+	.menu-movil {
+		display: none;
 	}
 }
 
@@ -246,16 +266,15 @@ h4 {
 
 /** Contacto Home **/
 .imagen-contacto {
+	color: #ffffff;
+	height: 40rem;
+	margin-top: 4.5rem;
 	background-image: url(../img/encuentra.jpg);
 	background-position: center center;
 	background-size: cover;
-	height: 40rem;
+	
 	display: flex;
 	align-items: center;
-}
-.contenido-contacto {
-	flex: 0 0 95%;
-	color: #ffffff;
 }
 .contenido-contacto p {
 	font-size: 1.8rem;
@@ -265,7 +284,7 @@ h4 {
 @media (min-width: 768px) {
 	.seccion-inferior {
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 	}
 	.blog {
 		flex-basis: 60%;
@@ -325,6 +344,7 @@ h4 {
 }
 .testimonial p {
 	text-align: right;
+	margin-right: 3rem;
 }
 .testimonial blockquote::before {
 	content: '';
